tests/pos/todo/lists/emp-00.ts

/*@ boop :: (#List[number]) => {v:boolean | 0 < 1} */
function boop(xs : number[]) : boolean{
	var r = empty(xs);
	return r;
}
